--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,12 @@ description = "A lightweight dependency injection library"
 authors = ["Sam Patterson <no@emails.please>"]
 license = "MIT"
 readme = "README.md"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Operating System :: OS Independent"
+]
 packages = [{ include = "tidi", from = "src" }]
 
 [tool.poetry.dependencies]
