--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tidi"
-version = "0.1.1"
+version = "0.1.2.dev1"
 description = "A lightweight dependency injection library"
 authors = ["Sam Patterson <no@emails.please>"]
 license = "MIT"
@@ -29,7 +29,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.1.1"
+version = "0.1.2.dev1"
 tag_format = "v$version"
 version_files = [
     "VERSION",
