--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "tidi"
 version = "0.1.2.dev4"
-description = "A lightweight dependency injection library"
+description = "A small dependency injection Python library"
 authors = ["Sam Patterson <no@emails.please>"]
 license = "MIT"
 readme = "README.md"
@@ -22,6 +22,15 @@ pre-commit = "^3.3.3"
 pytest-cov = "^4.1.0"
 pytest-mock = "^3.11.1"
 commitizen = "^3.7.0"
+
+
+[tool.poetry.group.docs.dependencies]
+mkdocs-material = "^9.2.5"
+mkdocs-git-authors-plugin = "^0.7.2"
+mkdocstrings = "^0.22.0"
+mkdocstrings-python = "^1.5.2"
+pygments = "^2.16.1"
+pymdown-extensions = "^10.1"
 
 [build-system]
 requires = ["poetry-core"]
