--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ classifiers = [
 ]
 packages = [{ include = "tidi", from = "src" }]
 
+[project.urls]
+Documentation = "https://pattersam.github.io/tidi/reference/"
+Repository = "https://github.com/pattersam/tidi"
+
 [tool.poetry.dependencies]
 python = "^3.11"
 
