--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,4 +25,8 @@ jobs:
           mypy --warn-unused-ignores src
       - name: Test with pytest
         run: |
-          pytest tests --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          pytest tests \
+            --doctest-modules \
+            --junitxml=junit/test-results.xml \
+            --cov=src \
+            --cov-report=term-missing
