cicd: fix environment of docs publishing job

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,8 +59,8 @@ jobs:
     needs: pypi-publish
     runs-on: ubuntu-latest
     environment:
-      name: pypi
-      url: https://pypi.org/p/tidi
+      name: docs
+      url: https://pattersam.github.io/tidi/
     permissions:
       id-token: write
       contents: write
