ci: run pytest in pre-push hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+default_install_hook_types: [pre-commit, pre-push]
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -5,7 +7,7 @@ repos:
       - id: trailing-whitespace
       - id: check-ast
       - id: check-yaml
-        args: ['--unsafe']
+        args: ["--unsafe"]
       - id: check-json
       - id: detect-private-key
       - id: check-executables-have-shebangs
@@ -18,12 +20,12 @@ repos:
     rev: v3.3.1
     hooks:
       - id: pyupgrade
-        args: [--py311-plus,]
+        args: [--py311-plus]
 
   - repo: https://github.com/ambv/black
     rev: 23.3.0
     hooks:
-    - id: black
+      - id: black
 
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
@@ -32,7 +34,7 @@ repos:
         name: isort (python)
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.5.1'
+    rev: "v1.5.1"
     hooks:
       - id: mypy
         args: [--warn-unused-ignores]
@@ -45,3 +47,13 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
+
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        stages: [push]
+        entry: poetry run pytest tests/
+        language: system
+        pass_filenames: false
+        always_run: true
