--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Python Modules",
-    "Operating System :: OS Independent"
+    "Operating System :: OS Independent",
 ]
 packages = [{ include = "tidi", from = "src" }]
 
@@ -48,7 +48,7 @@ version_files = [
     "VERSION",
     "pyproject.toml:^version",
     "src/tidi/__init__.py:^__version",
-    ]
+]
 update_changelog_on_bump = true
 changelog_incremental = true
 bump_message = "bump: $current_version → $new_version"
@@ -59,3 +59,6 @@ line-length = 100
 
 [tool.ruff]
 line-length = 120
+
+[tool.mypy]
+mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
