--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,7 @@ repos:
     hooks:
       - id: pytest
         name: pytest
-        stages: [push]
+        stages: [pre-push]
         entry: poetry run pytest tests/
         language: system
         pass_filenames: false
